--- a/shiftapp/templates/login.html
+++ b/shiftapp/templates/login.html
@@ -1,10 +1,21 @@
 {% extends "base.html" %}
+
 {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.username.label }} {{ form.username() }}<br>
-    {{ form.password.label }} {{ form.password() }}<br>
-    {{ form.submit() }}
-</form>
+  <div class="container mt-5">
+    <h2>Login</h2>
+    <form method="POST">
+      {{ form.hidden_tag() }}
+      <div class="form-group">
+        {{ form.username.label }}<br>
+        {{ form.username(class="form-control") }}
+      </div>
+      <div class="form-group">
+        {{ form.password.label }}<br>
+        {{ form.password(class="form-control") }}
+      </div>
+      <div class="form-group mt-3">
+        {{ form.submit(class="btn btn-primary") }}
+      </div>
+    </form>
+  </div>
 {% endblock %}
