--- a/shiftapp/templates/base.html
+++ b/shiftapp/templates/base.html
@@ -2,21 +2,9 @@
 <html>
 <head>
   <title>Shift Scheduler</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <div class="container mt-3">
-        {% for message in messages %}
-          <div class="alert alert-warning">{{ message }}</div>
-        {% endfor %}
-      </div>
-    {% endif %}
-  {% endwith %}
-
-  <div class="container">
-    {% block content %}{% endblock %}
-  </div>
+  {% block content %}{% endblock %}
 </body>
 </html>
