--- a/shiftapp/templates/login.html
+++ b/shiftapp/templates/login.html
@@ -1,21 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="container mt-5">
-    <h2>Login</h2>
-    <form method="POST">
-      {{ form.hidden_tag() }}
-      <div class="form-group">
-        {{ form.username.label }}<br>
-        {{ form.username(class="form-control") }}
-      </div>
-      <div class="form-group">
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control") }}
-      </div>
-      <div class="form-group mt-3">
-        {{ form.submit(class="btn btn-primary") }}
-      </div>
-    </form>
-  </div>
+<div class="login-box">
+  <h2>Login</h2>
+  <form method="POST">
+    {{ form.hidden_tag() }}
+    
+    <label>{{ form.username.label }}</label>
+    {{ form.username(size=32) }}
+    
+    <label>{{ form.password.label }}</label>
+    {{ form.password(size=32) }}
+    
+    {{ form.submit() }}
+  </form>
+</div>
 {% endblock %}
