--- a/shiftapp/templates/login.html
+++ b/shiftapp/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="login-box">
   <h2>Login</h2>
-  <form method="POST">
+  <form method="POST" autocomplete="off">
     {{ form.hidden_tag() }}
     
     <label>{{ form.username.label }}</label>
