swapped to using actual datetime for shift add instead of string

--- a/shiftapp/templates/admin.html
+++ b/shiftapp/templates/admin.html
@@ -9,7 +9,7 @@
         {{ form.hidden_tag() }}
         
         <label>{{ form.date.label }}</label>
-        {{ form.date(size=32) }}
+        {{ form.date(type="date") }}
 
         <label>{{ form.startTime.label }}</label>
         {{ form.startTime(size=32) }}
