--- a/shiftapp/static/style.css
+++ b/shiftapp/static/style.css
@@ -75,3 +75,24 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #d0d0d0;
 }
+
+.navbar {
+    background-color: #cccccc;
+    border-bottom: 2px solid #999999;
+    padding: 10px 0;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.navbar a {
+    color: #000000;
+    text-decoration: none;
+    margin: 0 15px;
+    font-family: "Times New Roman", serif;
+    font-weight: bold;
+}
+
+.navbar a:hover {
+    text-decoration: underline;
+}
+
