added delet shifts button

--- a/shiftapp/templates/base.html
+++ b/shiftapp/templates/base.html
@@ -32,7 +32,7 @@
         {% endwith %}
     </div>
 
-    <!-- Main Content -->
+    <!-- Main -->
     <div class="main-content">
         {% block content %}{% endblock %}
     </div>
