--- a/shiftapp/static/style.css
+++ b/shiftapp/static/style.css
@@ -120,3 +120,29 @@ input[type="submit"]:hover {
     background-color: #555555;
     cursor: pointer;
 }
+
+/* Default buttons */
+input[type="submit"] {
+    background-color: #e0e0e0;
+    color: #000000;
+    border: 1px solid #999999;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #d0d0d0;
+}
+
+/* Delete button */
+input.delete-button[type="submit"] {
+    background-color: #cc0000;
+    color: #ffffff;
+    border: none;
+}
+
+input.delete-button[type="submit"]:hover {
+    background-color: #990000;
+    cursor: pointer;
+}
