--- a/shiftapp/templates/admin.html
+++ b/shiftapp/templates/admin.html
@@ -27,13 +27,14 @@
     <hr>
 
     <h3>Existing Shifts</h3>
-    <table border="1" cellpadding="5" cellspacing="0" width="100%">
+   <table border="1" cellpadding="5" cellspacing="0" width="100%">
         <tr>
             <th>ID</th>
             <th>Date</th>
             <th>Start</th>
             <th>End</th>
             <th>Assigned To</th>
+            <th>Actions</th>
         </tr>
         {% for shift in shifts %}
         <tr>
@@ -42,6 +43,11 @@
             <td>{{ shift.startTime }}</td>
             <td>{{ shift.endTime }}</td>
             <td>{{ shift.user.username if shift.user else 'Unassigned' }}</td>
+            <td>
+                <form action="{{ url_for('deleteShift', shiftId=shift.id) }}" method="POST" style="display:inline;">
+                    <input type="submit" value="Remove" class="delete-button" onclick="return confirm('Are you sure you want to remove this shift?');">
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </table>
