--- a/shiftapp/static/style.css
+++ b/shiftapp/static/style.css
@@ -96,7 +96,7 @@ input[type="submit"]:hover {
     font-weight: bold;
     color: #222222;
     flex-grow: 1;
-    text-align: center;
+    text-align: left;
 }
 
 .nav-actions {
@@ -120,6 +120,22 @@ input[type="submit"]:hover {
     background-color: #555555;
     cursor: pointer;
 }
+
+.form-row {
+    margin-bottom: 10px;
+}
+
+.form-row label {
+    display: inline-block;
+    width: 100px;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.form-row input, .form-row select {
+    width: 200px;
+}
+
 
 /* Default buttons */
 input[type="submit"] {
